[package]
name = "homebridge-exporter"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
actix-web = "4"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
prometheus-client = { version = "0.18.1" }
Inflector = "*"
reqwest = { version = "0.11.12", features = ["blocking"] }

[[bin]]
name = "homebridge-exporter"
path = "src/homebridge-exporter.rs"
