[package]
name = "homebridge-exporter"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.11", features = ["headers", "tokio", "query"] }
clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"]}
tower-http = { version = "0.4.0", features = ["compression-gzip"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.19"
prometheus-client = { version = "0.21.2" }
Inflector = "0.11.4"
openssl = { version = "0.10", features = ["vendored"] }
env_logger = "0.10.0"
log = "0.4.17"

[[bin]]
name = "homebridge-exporter"
path = "src/homebridge-exporter.rs"
